--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <script src="./modulo_base.js" type="module">
+      console.log("holi a todos");
       </script>
   </body>
 </html>
